Adjust serices background, fix horizontal shadow overflow into MyServices component and add responsive layout to Realisations component

--- a/src/app/[locale]/page.module.scss
+++ b/src/app/[locale]/page.module.scss
@@ -160,4 +160,17 @@
       }
     }
   }
+
+  .realisationsSection {
+    padding: 32px;
+    border: 1px solid blue;
+    /*--------------- Tablet -> Desktop ---------------*/
+    @media screen and (min-width: 768px) {
+      padding: 48px;
+      /*--------------- to Desktop ---------------*/
+      @media screen and (min-width: 1280px) {
+        padding: 64px;
+      }
+    }
+  }
 }
